fix(oxtrust-server): format of generated Shibboleth files